--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "eslint": "^8.6.0",
-    "eslint-config-airbnb-base": "^16.0.3",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
     "nodemon": "^3.1.7"
   }
